Fix maven build plugins to allow --enable-preview