@@ -41,18 +41,38 @@
 
   </dependencies>
 
-  <!--	<build>-->
-  <!--		<plugins>-->
-  <!--			<plugin>-->
-  <!--				<groupId>org.apache.maven.plugins</groupId>-->
-  <!--				<artifactId>maven-compiler-plugin</artifactId>-->
-  <!--				<version>3.10.1</version>-->
-  <!--				<configuration>-->
-  <!--					<release>19</release>-->
-  <!--				</configuration>-->
-  <!--			</plugin>-->
-  <!--		</plugins>-->
-  <!--	</build>-->
+  	<build>
+  		<plugins>
+  			<plugin>
+  				<groupId>org.apache.maven.plugins</groupId>
+  				<artifactId>maven-compiler-plugin</artifactId>
+  				<version>3.10.1</version>
+  				<configuration>
+  					<release>19</release>
+  				</configuration>
+  			</plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <useModulePath>false</useModulePath>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <configuration>
+            <useModulePath>false</useModulePath>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+        </plugin>
+
+  		</plugins>
+  	</build>
+
 
 
 </project>
